objects/GEMS_Pharmacy_Scope_Code__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Case__r.Account.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accums_Integration__c</fullName>
        <label>Accums Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, Integrate Ded/OPX</fullName>
                </value>
                <value>
                    <fullName>Yes, Integrate Ded Only</fullName>
                </value>
                <value>
                    <fullName>Yes, Integrate OPX Only</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BET_Creation_Task_End_Date__c</fullName>
        <label>BET Creation Task End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BET_Creation_Task_Start_Date__c</fullName>
        <label>BET Creation Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BET_Creation_Task_Status__c</fullName>
        <label>BET Creation Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT( Case__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Pharmacy Scope Codes</relationshipLabel>
        <relationshipName>Pharmacy_Scope_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type__c</fullName>
        <label>Copay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Business_Open__c</fullName>
        <formula>Case__r.GEMS_Days_Business_Open__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days (Business) Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formulary_Type__c</fullName>
        <label>Formulary Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Performance Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Peer_Review_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Peer Review In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Pay_Code__c</fullName>
        <label>Group Pay Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_BlueSTAR_Update_Request_Task_Cmpltd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked once the &quot;BlueSTAR Update Request&quot; task is completed.</description>
        <label>Is BlueSTAR Update Request Task Cmpltd?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Complete__c</fullName>
        <formula>(ISPICKVAL(Scope_Status__c, &apos;No Scope Code Changes&apos;) &amp;&amp;  ISPICKVAL(Status__c, &apos;Peer Review Approved&apos;))
 || (ISPICKVAL(Status__c, &apos;Update BlueSTAR &amp; AS400 Completed&apos;))</formula>
        <label>Is Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>G=Flat/F=Flat/NF=Percent</fullName>
                </value>
                <value>
                    <fullName>G=Flat/F=Percent/NF=Percent</fullName>
                </value>
                <value>
                    <fullName>G = Percent/F=Flat/NF=Flat</fullName>
                </value>
                <value>
                    <fullName>G = Percent/F=Flat/NF=Percent</fullName>
                </value>
                <value>
                    <fullName>No Mail Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Case_Effective_Date__c</fullName>
        <formula>Case__r.GEMS_Case_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Reject_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Peer Review Reject Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Task_End_Date__c</fullName>
        <label>Peer Review Task End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Task_Start_Date__c</fullName>
        <label>Peer Review Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Task_Status__c</fullName>
        <label>Peer Review Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peer_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peer Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pharmacy_Scope_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Scope_Code_Task_End_Date__c</fullName>
        <label>Pharmacy Scope Code Task End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Scope_Code_Task_Start_Date__c</fullName>
        <label>Pharmacy Scope Code Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Scope_Code_Task_Status__c</fullName>
        <label>Pharmacy Scope Code Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prime_Build_Task_End_Date__c</fullName>
        <label>Prime Build Task End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prime_Build_Task_Start_Date__c</fullName>
        <label>Prime Build Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prime_Build_Task_Status__c</fullName>
        <label>Prime Build Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prime_Certify_Date__c</fullName>
        <label>Prime Certify Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prime_Plan_ID__c</fullName>
        <label>Prime Plan ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Scope_Code__c</fullName>
        <label>Related Scope Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related</label>
        <referenceTo>GEMS_Pharmacy_Scope_Code__c</referenceTo>
        <relationshipLabel>Temp Pharmacy Scope Codes</relationshipLabel>
        <relationshipName>Temp_Pharmacy_Scope_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Format_Code__c</fullName>
        <label>Report Format Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <label>Retail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>G=Flat/F=Percent/NF=Percent</fullName>
                </value>
                <value>
                    <fullName>G=Flat/F=Flat/NF=Percent</fullName>
                </value>
                <value>
                    <fullName>G = Percent/F=Flat/NF=Flat</fullName>
                </value>
                <value>
                    <fullName>G = Percent/F=Flat/NF=Percent</fullName>
                </value>
                <value>
                    <fullName>No Retail Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rider_Code__c</fullName>
        <label>Rider Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Code_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/GEMSViewScopeDetail?Id=&quot;&amp;Id&amp;&quot;&amp;sfdc.override=1&quot; , &quot;View Scope Code&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope Code Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Status__c</fullName>
        <label>Scope Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Scope Code Changes</fullName>
                </value>
                <value>
                    <fullName>Scope Change Only - NoBETSub</fullName>
                </value>
                <value>
                    <fullName>BET Submission Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Peer Review Pending</fullName>
                </value>
                <value>
                    <fullName>Peer Review Approved</fullName>
                </value>
                <value>
                    <fullName>Peer Review Rejected</fullName>
                </value>
                <value>
                    <fullName>BET Creation Started</fullName>
                </value>
                <value>
                    <fullName>BET Creation Completed</fullName>
                </value>
                <value>
                    <fullName>Prime Build Started</fullName>
                </value>
                <value>
                    <fullName>Prime Build Completed</fullName>
                </value>
                <value>
                    <fullName>AS400 &amp; BlueStar Update Pending</fullName>
                </value>
                <value>
                    <fullName>AS400 &amp; BlueStar Update Completed</fullName>
                </value>
                <value>
                    <fullName>AS400 &amp; BlueStar Verification Pending</fullName>
                </value>
                <value>
                    <fullName>AS400 &amp; BlueStar Verification Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
                <value>
                    <fullName>Dummy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_AS400__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update AS400</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_BlueSTAR_AS400_Task_End_Date__c</fullName>
        <label>Update BlueSTAR &amp; AS400 Task End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Update_BlueSTAR_AS400_Task_Start_Date__c</fullName>
        <label>Update BlueSTAR &amp; AS400 Task Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Update_BlueSTAR_AS400_Task_Status__c</fullName>
        <label>Update BlueSTAR &amp; AS400 Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verify_BlueSTAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify BlueSTAR</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS Pharmacy Scope Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scope Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy Scope Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GEMS_Accums_Integration</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Accums_Integration__c, &apos;&apos;), true, false)</errorConditionFormula>
        <errorMessage>Please select Accums Integration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Copay_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Copay_Type__c, &apos;&apos;), true, false)</errorConditionFormula>
        <errorMessage>Please select Copay Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Formulary_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Formulary_Type__c, &apos;&apos;), true, false)</errorConditionFormula>
        <errorMessage>Please select Formulary Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Group_Pay_Code</fullName>
        <active>true</active>
        <errorConditionFormula>IF(((ISPICKVAL(Case__r.HCSC_Division__c, &apos;NM&apos;) || ISPICKVAL(Case__r.HCSC_Division__c, &apos;IL&apos;))&amp;&amp; (LEN(Group_Pay_Code__c)&lt;2 || LEN(Group_Pay_Code__c)&gt;4)), true, false)</errorConditionFormula>
        <errorMessage>Group Pay Code: Expecting at least 2 characters. Maximum allowed length is 4 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Group_Pay_Code_MT</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ((ISPICKVAL(Case__r.HCSC_Division__c, &apos;MT&apos;)) &amp;&amp;(Group_Pay_Code__c != &apos;XX&apos; &amp;&amp; Group_Pay_Code__c != &apos;00&apos;) ), true, false)</errorConditionFormula>
        <errorMessage>Group Pay Code: Expecting either &apos;XX&apos; or &apos;00&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Group_Pay_Code_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (((ISPICKVAL(Case__r.HCSC_Division__c, &apos;IL&apos;)) || (ISPICKVAL(Case__r.HCSC_Division__c, &apos;NM&apos;)) || (ISPICKVAL(Case__r.HCSC_Division__c, &apos;MT&apos;)) ) &amp;&amp;((Group_Pay_Code__c == &apos;&apos;)|| (Group_Pay_Code__c == Null))), true, false)</errorConditionFormula>
        <errorMessage>Required fields are missing: [Group Pay Code]</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Group_Pay_Code_Zeroes</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ((NOT(ISPICKVAL(Case__r.HCSC_Division__c, &apos;MT&apos;))) &amp;&amp;(Group_Pay_Code__c == &apos;000&apos; || Group_Pay_Code__c == &apos;00&apos; || Group_Pay_Code__c == &apos;0000&apos;) ), true, false)</errorConditionFormula>
        <errorMessage>Group Pay Code: &apos;00&apos; Or &apos;000&apos; Or &apos;0000&apos; is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Prime_Plan_ID</fullName>
        <active>true</active>
        <errorConditionFormula>IF((LEN(Prime_Plan_ID__c)&lt;6 &amp;&amp; LEN(Prime_Plan_ID__c)&gt;0), true, false)</errorConditionFormula>
        <errorMessage>Prime Plan ID: Expecting a minimum of 6 numeric characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Report_Format_Code</fullName>
        <active>true</active>
        <errorConditionFormula>IF(((ISPICKVAL(Case__r.HCSC_Division__c, &apos;MT&apos;))&amp;&amp; (ISPICKVAL(Report_Format_Code__c, &apos;&apos;))), true, false)</errorConditionFormula>
        <errorMessage>Please select Report Format Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Rider_Code</fullName>
        <active>true</active>
        <errorConditionFormula>IF(((ISPICKVAL(Case__r.HCSC_Division__c, &apos;NM&apos;))&amp;&amp; (NOT(ISPICKVAL(Rider_Code__c, &apos;09&apos;) || ISPICKVAL(Rider_Code__c, &apos;10&apos;)))), true, false)</errorConditionFormula>
        <errorMessage>Rider Code: Expecting either &apos;09&apos; or &apos;10&apos; for NM Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Rider_Code_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF((((ISPICKVAL(Case__r.HCSC_Division__c, &apos;NM&apos;)) || (ISPICKVAL(Case__r.HCSC_Division__c, &apos;IL&apos;)) )&amp;&amp; (ISPICKVAL(Rider_Code__c, &apos;&apos;))), true, false)</errorConditionFormula>
        <errorMessage>Please select Rider Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Scope_Code</fullName>
        <active>true</active>
        <errorConditionFormula>IF((LEN(Name)&lt;2 || LEN(Name)&gt;4), true, false)</errorConditionFormula>
        <errorMessage>Scope Code: Expecting at least 2 characters. Maximum allowed length is 4 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEMS_Scope_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Scope_Status__c, &apos;&apos;), true, false)</errorConditionFormula>
        <errorMessage>Please select Scope Status</errorMessage>
    </validationRules>
</CustomObject>